fix issue with cast cutoff on mobile

--- a/src/Components/Cast.css
+++ b/src/Components/Cast.css
@@ -94,7 +94,7 @@
 .cast-pages-character-character-name {
   font-size: 40px;
   margin-bottom: 10px;
-  margin-top: -5px;
+  margin-top: 0;
 }
 
 .cast-pages-character-text {
